--- a/blog/package.json
+++ b/blog/package.json
@@ -8,6 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-less": "^1.0.1",
+    "antd": "^4.6.4",
+    "babel-plugin-import": "^1.13.0",
     "next": "9.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1"
