--- a/blog/package.json
+++ b/blog/package.json
@@ -15,6 +15,7 @@
     "less": "^3.12.2",
     "next": "9.5.3",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-markdown": "^4.3.1"
   }
 }
