--- a/blog/package.json
+++ b/blog/package.json
@@ -13,6 +13,7 @@
     "antd": "^4.6.4",
     "babel-plugin-import": "^1.13.0",
     "less": "^3.12.2",
+    "markdown-navbar": "^1.4.3",
     "next": "9.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
