--- a/blog/package.json
+++ b/blog/package.json
@@ -8,9 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.2.2",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
-    "antd": "^4.6.4",
+    "antd": "^3.23.3",
     "axios": "^0.20.0",
     "babel-plugin-import": "^1.13.0",
     "highlight.js": "^10.2.0",
