--- a/admin/package.json
+++ b/admin/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.6.4",
     "axios": "^0.20.0",
     "marked": "^1.1.1",
+    "moment": "^2.28.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
